# Automatic-Coarsening-of-Quad-based-Surface-Model

./: .gitignore  CMakeLists.txt  README.md
application/: CMakeLists.txt
application/src/: CMakeLists.txt  main.cpp
cmake/: LibiglDownloadExternal.cmake
include/igl/: readOFF.h
tutorial/102_DrawMesh/: edge_rotate_doublet.off  edge_rotate_surface.off  main.cpp  per_quad_face_normals.cpp  per_quad_face_normals.h  quad_cube.off  quad_doublet_surface.off  quad_face.off  quad_strange_surface.off  quad_surface.off  tri_cube.off  vertex_rotate_surface.off
tutorial/102_DrawMesh/quad/: big_surface.off  hole_surface2.off  quad_surface.off  quad_surface2.off  singlet.off  vertex_rotate_surface.off
tutorial/102_DrawMesh/quad_test/: big_surface.off  edge_collapse.off  edge_rotate_doublet.off  edge_rotate_surface.off  hole_surface.off  quad_surface.off
